--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
@@ -19,7 +19,7 @@
 		    <div class="bo-footer-smap">
 	  		{% for path,link in footer_links.iteritems %}
 		        <a href="{{link}}" target="_blank">
-		            <img src="{{path}}" style="height: 100px; width:110px;" />
+		            <img src="{{path}}" class="bo-footer-images" />
 		        </a>
   	    	{% endfor %}
 		    </div>
