--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5706,6 +5706,15 @@ ul.nav_menu_1 {
   word-spacing:20px;
 }
 
+.bo-footer-images{
+    display: inline;
+    max-width:120px;
+    max-height:95px;
+    width: auto;
+    height: auto; 
+    vertical-align: bottom;
+}
+
 .bo-footer-uonline {
   width: 300px; /* Account for margins + border values */
   float: left;
@@ -5722,6 +5731,8 @@ ul.nav_menu_1 {
   color: #636A7D;
   vertical-align: middle;
 }
+
+
 
 
 /*##### Footer Responsive #####*/
