--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -6130,3 +6130,11 @@ ul.nav_menu_1 {
     margin-left: 0.5em;
 }
 
+
+
+/*  User Dashboard Implementation */
+
+.dashboard{
+    width:990px;
+    background-color: $primary-blue;
+}
