configurable footer links

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -5,7 +5,7 @@
 {% user_access_policy groupid request.user as user_access %}
 
 
-{% block title %}  Unit {% endblock%}
+{% block title %}   {% endblock%}
 
 {% block head %}
   <script src="/static/ndf/bower_components/jquery-backstretch/jquery.backstretch.min.js"></script>
