--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5996,7 +5996,168 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
 
 /*  User Dashboard Implementation */
 /* line 6137, ../../../scss/_clix2017.scss */
+.left_column {
+  float: left;
+  width: 625px;
+  border-radius: 3px;
+  background-color: #74b3dc;
+  box-sizing: border-box;
+  color: #444;
+}
+
+/* line 6146, ../../../scss/_clix2017.scss */
 .dashboard {
-  width: 990px;
-  background-color: #164A7B;
+  background: #fafafa;
+  border: none;
+  border-radius: 6px;
+  padding: 25px;
+  font-size: 14px;
+  position: relative;
+  box-shadow: none;
+}
+
+/* line 6156, ../../../scss/_clix2017.scss */
+.account_heading {
+  border-bottom: 2px solid #E5E5E5;
+  color: #444;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 1;
+  margin: 0;
+  padding-bottom: 28px;
+}
+
+/* line 6166, ../../../scss/_clix2017.scss */
+.account_group {
+  display: table;
+  padding: 20px 0;
+  width: 100%;
+}
+/* line 6171, ../../../scss/_clix2017.scss */
+.account_group .group_label {
+  font-weight: bold;
+  display: table-cell;
+  padding: 0 10px;
+  vertical-align: top;
+  width: 145px;
+}
+/* line 6177, ../../../scss/_clix2017.scss */
+.account_group .group_label > h3 {
+  font-weight: bold;
+  margin: 0;
+}
+/* line 6180, ../../../scss/_clix2017.scss */
+.account_group .group_label > h3 .account_subheading {
+  font-size: 14px;
+  line-height: 1.2;
+}
+/* line 6186, ../../../scss/_clix2017.scss */
+.account_group .group_content {
+  display: table-cell;
+  padding: 0 10px;
+  vertical-align: top;
+}
+/* line 6192, ../../../scss/_clix2017.scss */
+.account_group .account {
+  margin: 0 0 10px;
+  display: block;
+  position: relative;
+}
+/* line 6198, ../../../scss/_clix2017.scss */
+.account_group .account .accordion_trigger_wrapper .accordion_label {
+  color: #444;
+  float: left;
+  font-size: 14px;
+  margin: 0;
+}
+/* line 6204, ../../../scss/_clix2017.scss */
+.account_group .account .accordion_trigger_wrapper .pencil_edit_button {
+  position: absolute;
+  top: 50%;
+  right: -43px;
+  width: 48px;
+  height: 48px;
+  margin: 0px 0 0 0;
+  padding: 0;
+  display: block;
+  border: none;
+  background: none;
+  overflow: hidden;
+  line-height: 24px;
+  font-size: 24px;
+  color: #000;
+  opacity: 0.25;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+}
+/* line 6226, ../../../scss/_clix2017.scss */
+.account_group .account .accordion_trigger_wrapper .accordion_content .input-setting input.text_field[type="text"] {
+  background: transparent;
+  border: 1px solid #D9D9D9;
+  color: #444;
+  font-size: 14px;
+  margin: 0;
+  max-width: 100%;
+  outline: 0;
+  padding: 6px 9px;
+  width: 330px;
+  border-radius: 2px;
+}
+/* line 6240, ../../../scss/_clix2017.scss */
+.account_group .account .accordion_trigger_wrapper .accordion_content .password-wrapper input.password_placeholder[type="text"] {
+  color: rgba(68, 68, 68, 0.45) !important;
+}
+/* line 6243, ../../../scss/_clix2017.scss */
+.account_group .account .accordion_trigger_wrapper .accordion_content .password-wrapper input.password_field[type="password"] {
+  position: relative;
+  z-index: 2;
+}
+
+/* ---------------------- */
+/* line 6260, ../../../scss/_clix2017.scss */
+#progressive-validation {
+  width: 400px;
+  margin: 100px auto 0 auto;
+}
+/* line 6263, ../../../scss/_clix2017.scss */
+#progressive-validation input {
+  display: block;
+  border-radius: 5px;
+  border: none;
+  background: white;
+  font-family: OpenSans-regular;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 200;
+  width: 100%;
+  padding: 15px;
+  margin: 0 0 10px 0;
+  opacity: .2;
+  outline: none;
+  box-shadow: 0 0 0 1px transparent;
+  background-size: 0px 0px;
+  background-position: right 23px;
+  background-repeat: no-repeat;
+}
+/* line 6281, ../../../scss/_clix2017.scss */
+#progressive-validation input[type="submit"], #progressive-validation input[type="submit"]:valid {
+  background-color: #1a3e4c;
+  color: white;
+  background-image: none;
+}
+/* line 6286, ../../../scss/_clix2017.scss */
+#progressive-validation input:focus {
+  box-shadow: 0 0 0 1px #00aeef;
+  opacity: 1 !important;
+}
+/* line 6290, ../../../scss/_clix2017.scss */
+#progressive-validation input:enabled {
+  opacity: .8;
+}
+/* line 6293, ../../../scss/_clix2017.scss */
+#progressive-validation input:valid {
+  background-size: 46px 46px;
+  background-position: right 0px;
+  background-repeat: no-repeat;
 }
