--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -95,7 +95,6 @@
 </div>
 
 <div class="lms_secondary_header">
- 
   <ul class="nav_menu_1">
     <li>
       <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>
@@ -105,21 +104,22 @@
       <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>
       {% if not group_object.project_config.tab_name %}{% trans "Lessons" %}{% else %}{{group_object.project_config.tab_name}} {% endif %}</a> 
      </li>
-    {% if 'Group' not in group_object.member_of_names_list %}
+     {}
+    {% if 'Group' not in group_object.member_of_names_list or 'Author' not in group_object.member_of_names_list %}
     <li>  <a href="{% url 'course_raw_material' group_id %}" {% if title == 'raw material' or title == "raw_material_detail"  %}class="selected"{% endif %}>{% trans "Resources" %}</a> </li>
     {% endif %}
     <li>
-    <li>  <a  href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %} class="selected" {% endif %} > {% if 'Group'  in group_object.member_of_names_list %} {% trans "E-Library" %} {% else %} {% trans "Gallery" %}{% endif %}</a> </li>
+    <li>  <a  href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %} class="selected" {% endif %} > {% if 'Group'  in group_object.member_of_names_list or 'Author' in group_object.member_of_names_list %} {% trans "E-Library" %} {% else %} {% trans "Gallery" %}{% endif %}</a> </li>
     <li>
       <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>
-      {% if 'Group' in group_object.member_of_names_list %}
+      {% if 'Group' in group_object.member_of_names_list or 'Author' in group_object.member_of_names_list%}
         {% trans "Blog" %} 
       {% else %}
         {% trans "Notebook" %} 
       {% endif %}
       </a>
     </li>
-    {% if 'Group'  in group_object.member_of_names_list %}
+    {% if 'Group'  in group_object.member_of_names_list or 'Author' in group_object.member_of_names_list%}
     <li>
       <a href="{% url 'curriculum_list' groupid  %}"> {% trans "Topic Map" %}</a>
     </li>
