--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -70,18 +70,19 @@
         {% endif %}
     </div>
 
-        <div class="small-12 columns group_sections_content">
-    {% if title == "my performance" %}
-                    <div class="small-12 columns lms_explore_back_unit">
-        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-        {% for each_obj in units_cur %}
-          <li class="card-image-wrapper">
-            {% include "ndf/card_group.html" with group_counts=True node=each_obj no_url=True first_arg=each_obj.pk %}
-          </li>
-        {% endfor %}
-        </ul>
-      </div>
-        </div>
+    <div class="small-12 columns group_sections_content">
+        {% if title == "my performance" %}
+          <div class="small-12 columns lms_explore_back_unit">
+            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+              {% for each_obj in units_cur %}
+                <li class="card-image-wrapper">
+                  {% include "ndf/card_group.html" with group_counts=True node=each_obj no_url=True first_arg=each_obj.pk %}
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+          {% include 'ndf/pagination.html' with urlname="my_performance_paged" first_arg=group_id  page_info=my_perf_page_cur %}
+    </div>
 
     </div>
     <div id="show-overlay" class="reveal-modal reveal-modal-overlay" data-options="close_on_background_click:false;close_on_esc:false;"  data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
